--- a/layouts/publications/single.html
+++ b/layouts/publications/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="publication">
+<article class="publications">
     <h1>{{ .Title }}</h1>
     <p>{{ .Abstract }}</p>
     <div class="additional-text">
